--- a/README
+++ b/README
@@ -4,8 +4,10 @@ Most features of full VDPAU are missing, only decoding of h264, mpeg1 and
 mpeg2 and output of software-decoded videos will work.
 Output bypasses X video driver, hence don't try to use Xv
 at the same time.
-Only tested with mplayer, if other players need unimplemented functions
+Only tested with mplayer, mpv and vdr. If other players need unimplemented functions,
 something will fail.
+
+Build it:
 
    $ make
    $ make install
