--- a/README
+++ b/README
@@ -14,17 +14,16 @@ Build it:
 
    $ export VDPAU_DRIVER=sunxi
 
+To disable OSD support for e.g. subtitles, set VDPAU_NOOSD environment
+variable to 1 (OSD enabled by default):
+   $ export VDPAU_NOOSD=1
+
 and then for mplayer:
    $ mplayer -vo vdpau -vc ffmpeg12vdpau,ffh264vdpau, [filename]
 or for mpv:
    $ mpv --vo=vdpau --hwdec=vdpau --hwdec-codecs=all [filename]
 
 Note: Make sure that you have write access to both /dev/disp and /dev/cedar_dev
-
-To enable OSD support for e.g. subtitles, set VDPAU_OSD environment
-variable to 1:
-   $ export VDPAU_OSD=1
-
 This partly breaks X11 integration due to hardware limitations. The video
 area can't be overlapped by other windows. For fullscreen use this is no
 problem.
